# LogicBuilder

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build-wasm.sh  build.mjs  deno.jsonc  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  global.d.ts  nginx.conf  package-lock.json  package.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
lce-ts-bindings/: Cargo.toml  index.ts
lce-ts-bindings/src/: lib.rs
logic-circuit-engine/: Cargo.toml
logic-circuit-engine/src/: chip.rs  lib.rs  signal.rs
logic-circuit-engine/src/test/: mod.rs
server/: Dockerfile  package-lock.json  package.json
server/src/: index.ts  validators.ts
src/core/: index.d.ts
src/main/: main.ts  preload.ts
src/render/: index.css  index.html  index.tsx
src/render/components/: HelloWorld.tsx
src/render/components/App/: App.module.css  constants.ts  index.tsx
src/render/components/ComponentList/: ComponentList.module.css  index.tsx
src/render/components/GridSurface/: GirdSurface.module.css  GridDraggabble.tsx  index.tsx
src/render/components/SimulationPanel/: SimulationPanel.module.css  index.tsx
src/render/components/Statusbar/: Statusbar.module.css  index.tsx
src/render/components/Titlebar/: Titlebar.module.css  index.tsx
src/render/components/Workspace/: Workspace.module.css  index.tsx
src/render/components/circuit-components/: GraphNode.tsx
src/render/components/lib/: DragTarget.tsx  DropTarget.tsx  Router.ts
src/render/lib/: Position.ts  Router.ts
src/render/store/: app.ts  circuit.ts  workspace.ts
(+46 files in other folders)
